--- a/WEB_2/css/styles.css
+++ b/WEB_2/css/styles.css
@@ -133,6 +133,7 @@
 }
 
 
+/************************* ESTILOS PARA RESPONSIVIDAD ************************/
 
 
 @media only screen and (max-width: 426px) {
